--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/react-fontawesome": "0.1.16",
     "bootstrap": "5.1.3",
     "node-sass": "7.0.1",
     "react": "17.0.2",
